# AgenticDataPlatformCC

./: .env.example  .gitignore  BUG_FIXES_APPLIED.md  BUG_REPORT_AND_FIXES.md  CHANGELOG.md  CLEANUP_AND_FINALIZATION_PLAN.md  COMPLETION_SUMMARY.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE3_SUMMARY.md  PLATFORM_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  UNDERSTANDING_GUIDE.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
configs/dev/: platform.yaml  prometheus.yml
docs/architecture/: lakehouse.md  streaming.md
docs/guides/: kafka-examples.md  lakehouse-examples.md
scripts/monitoring/: health_check.sh
scripts/setup/: create_kafka_topics.sh  init_postgres.sql
src/: __init__.py
src/common/: __init__.py  config.py  exceptions.py  logging.py  metrics.py  resilience.py  security.py
src/governance/: __init__.py
src/governance/lineage/: __init__.py  tracker.py
src/governance/quality/: validator.py
src/ingestion/: __init__.py
src/ingestion/streaming/: __init__.py  event_producer.py  event_schemas.py
src/lakehouse/: __init__.py
src/lakehouse/iceberg/: __init__.py  catalog.py  partition_evolution.py  table_manager.py  time_travel.py
src/lakehouse/medallion/: __init__.py  bronze_layer.py  gold_layer.py  silver_layer.py
src/mcp/: __init__.py
src/mcp/servers/: data_server.py  metadata_server.py
src/query/: __init__.py
src/query/spark/: session.py
src/query/trino/: __init__.py  executor.py
src/streaming/: __init__.py
src/streaming/flink/: __init__.py
src/streaming/flink/jobs/: __init__.py  bronze_to_silver.py  silver_to_gold.py
src/streaming/kafka/: __init__.py  admin.py  consumer.py  producer.py
src/vector/: __init__.py
src/vector/embeddings/: generator.py
src/vector/stores/: qdrant_store.py
tests/: __init__.py  conftest.py
tests/unit/test_common/: test_config.py  test_security.py
tests/unit/test_lakehouse/: __init__.py  test_bronze_layer.py  test_gold_layer.py  test_silver_layer.py
tests/unit/test_streaming/: __init__.py  test_kafka_admin.py  test_kafka_consumer.py  test_kafka_producer.py
