[tool.poetry]
name = "agentic-data-platform"
version = "0.1.0"
description = "Modern enterprise data platform with lakehouse architecture, streaming processing, vector databases, and MCP compliance"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core utilities
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
click = "^8.1.7"

# Apache Iceberg
pyiceberg = {extras = ["s3fs", "pyarrow"], version = "^0.6.0"}

# Apache Paimon (via PyFlink integration)
apache-flink = "^1.18.0"
pyflink = "^1.18.0"

# Kafka & Streaming
kafka-python = "^2.0.2"
confluent-kafka = {extras = ["avro", "protobuf"], version = "^2.3.0"}

# Data processing
pyarrow = "^14.0.0"
pandas = "^2.1.0"
polars = "^0.20.0"
duckdb = "^0.9.0"

# Query engines
trino = "^0.328.0"
pyspark = "^3.5.0"

# Vector databases
pinecone-client = "^3.0.0"
pymilvus = "^2.3.0"
qdrant-client = "^1.7.0"

# Embeddings & AI
openai = "^1.6.0"
cohere = "^4.37.0"
sentence-transformers = "^2.2.0"
transformers = "^4.36.0"

# Agent frameworks
langgraph = "^0.0.30"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"

# MCP (Model Context Protocol)
mcp = "^0.1.0"

# Data governance
datahub = "^0.12.0"
openlineage-python = "^1.6.0"
great-expectations = "^0.18.0"

# Security & Access Control
cryptography = "^41.0.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"

# API frameworks
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.219.0"}
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"

# Monitoring & Observability
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
structlog = "^24.1.0"

# Dashboard
streamlit = "^1.30.0"
plotly = "^5.18.0"
networkx = "^3.2.1"

# Storage clients
boto3 = "^1.34.0"
s3fs = "^2024.2.0"
minio = "^7.2.0"

# Database clients
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
redis = "^5.0.1"

# Data quality & validation
jsonschema = "^4.20.0"
cerberus = "^1.3.5"

# Utilities
requests = "^2.31.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
rich = "^13.7.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"

# Linting & Formatting
ruff = "^0.1.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

# Type stubs
types-pyyaml = "^6.0.12"
types-requests = "^2.31.0"
types-redis = "^4.6.0"

# Development tools
ipython = "^8.19.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.scripts]
dataplatform = "src.cli.main:cli"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
